# evolve_fb_ads_insights

./: .gcloudignore  .gitignore  README.md  broadcast.py  main.py  models.py  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: main.yaml
configs/: AdsInsights.json  AdsInsights_CountryRegion.json
legacy/: broadcast.py  models.py
legacy/configs/: AdsInsights_AgeGenders.json  AdsInsights_Devices.json  AdsInsights_Hourly.json
legacy/test/: test_broadcast_auto.py  test_units_manual.py
models/: AdsInsights_AgeGenders.py  AdsInsights_CountryRegion.py  AdsInsights_Devices.py  AdsInsights_Hourly.py  models.py
test/: test_broadcast_manual.py  test_units.py  test_units_auto.py  test_units_manual.py
